[package]
name = "llm-exec"
version = "0.1.0"
edition = "2021"
description = "Execute terminal commands based on LLM instructions"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
